--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,9 @@
 _repo: The-Georgics_232
-_version: 0.1.0
+_version: 0.2.0
 alternative_title: Georgica. English
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Virgil
@@ -13,6 +16,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/129
     wikipedia: http://en.wikipedia.org/wiki/Virgil
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/232#The-Georgics
 gutenberg_issued: '1995-03-01'
 gutenberg_type: Text
 identifiers:
